# project_Laubner_Ruecker

./: CMakeList.txt  CMakeLists.txt
Laubner/: .gitignore
Laubner/src/: main.cc
Laubner/version_1/: CMakeLists.txt
Laubner/version_2/: CMakeLists.txt
Laubner/version_2/src/: main.cpp  vehicle.cpp  vehicle.hpp
Ruecker/: CMakeLists.txt  Fahrzeugsammlung.csv  lkw.cc  lkw.h  main.cc  pkw.cc  pkw.h  specialVehicle.cc  specialVehicle.h  vehicle.cc  vehicle.h  vehicleManager.cc  vehicleManager.h
src/: main.cc  time.cc  time.h  vehicle.cc  vehicle.h  vehicleManager.cc  vehicleManager.h
